# federated-fraud-detection

./: .coverage  .gitignore  CLEANUP_COMPLETION.md  FL_Fraud_Detection.ipynb  Makefile  README.md  REQUIREMENTS_VALIDATION.md  TRAINING_GUIDE_v6.md  app.html  docker-compose.yml  mlflow.db  pyproject.toml  requirements.txt  run_all_clients.ps1  run_all_clients.py  verify_features.py
api/: main.py  middleware.py  model_registry.py  schemas.py
app/: index.html  package-lock.json  package.json  vite.config.js
app/src/: App.jsx  styles.css
client/: dataset.py  fl_client.py  fl_client_dp.py  model.py  run_client.py
config/: custom_transaction_mapping.example.json  drift_config.json  normalization_params.json  schema.json  vietnam_synthetic_mapping.json
contracts/: normalization_params.json  schema.json
data/: generate_synthetic.py  load_ieee_cis.py  loader.py  normalize.py
data/drift_ref/: reference_window.parquet
data/fx/: converter.py  rates.py
dataset/: custom_transaction_adapter.py  generate_vietnam_synthetic.py  load_custom_transactions.py  load_ieee_cis.py
dataset/fx/: __init__.py  converter.py  rates.py
docs/: ARCHITECTURE.md  FORMULA_CODE_MAP.md  IEEE_REPORT.docx  IEEE_REPORT.tex  OPERATIONS.md  PERFORMANCE_IMPROVEMENTS_v6.md  PRESENTATION_GUIDE.md  PRESENTATION_SLIDES.tex  PROJECT_AUDIT.md  PROJECT_REFERENCE.md  README_ARCHITECTURE.md  REFACTORING_SUMMARY.md  SETUP.md  SETUP_AND_RUNNING.md  SYSTEM_REFERENCE.md
drift/: alert_manager.py  concept_drift.py  delayed_label_reconcile.py  detectors.py  exporter.py  prediction_monitor.py
model/: architecture.py  calibrate.py  evaluate.py
monitoring/: prometheus.yml
ops/: edge_node_spec.md
outputs/: lightgbm_baseline.txt  lightgbm_baseline_results.json
outputs/archive/checkpoints_20260617_113620/: active_training_run.json  averaged_top_005_run_20260616_081043.json  averaged_top_010.json  calibration_params.json  deployment_manifest.json  round_074.json  round_075.json  round_076.json  round_077.json  round_078.json  round_079.json  round_080.json  round_081.json  round_082.json  round_083.json  round_084.json  round_085.json
scripts/: __init__.py  compare_scalability_runs.py  evaluate_target_checkpoints.py  inject_drift.py  launch_clients.py  lightgbm_baseline.py  manage_runs.py  monitor_training.py  resource_profile.py  run_client.py  run_local_flower.py  run_paths.py  run_server.py  run_virtual_federated.py  submit_flower_run.py  zero_shot_external_eval.py
server/: checkpoint_manager.py  fl_server.py  strategy.py
src/: __init__.py
src/client/: __init__.py  client.py  factory.py  metrics.py
src/data/: __init__.py  dataset.py  feature_registry.py
src/flower_app/: __init__.py  client_app.py  server_app.py
src/model/: __init__.py  fraud_mlp.py
src/server/: __init__.py  aggregation.py  checkpoint_manager.py  client_state.py  failure_detector.py  runtime.py  strategy.py  training_schedule.py
src/system/: __init__.py  resilience.py
tests/demo/: inject_drift.py
tests/integration/: test_drift_simulation.py  test_rollback.py
tests/unit/: test_aggregation_algorithm.py  test_api.py  test_architecture.py  test_calibrate.py  test_checkpoint_manager.py  test_client_metrics.py  test_concept_drift.py  test_converter.py  test_custom_transaction_adapter.py  test_dataset.py  test_evaluate.py  test_exporter.py  test_failure_detector.py  test_fl_client.py  test_generate_synthetic.py  test_loader.py  test_model.py  test_normalize.py  test_prediction_monitor.py  test_resilience.py  test_schemas.py  test_strategy.py  test_training_schedule.py  test_vietnam_synthetic_generator.py  test_zero_shot_external_eval.py
(+4 files in other folders)
