[project]
name = "fl-fraud-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy==2.4.5",
    "pandas>=2.2,<3",
    "pyarrow==24.0.0",
    "pytest>=9.0.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2026.2",
    "river>=0.21.0",
    "six==1.17.0",
    "torch",
    "tzdata==2026.2",
]

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "api*",
    "client*",
    "data*",
    "drift*",
    "model*",
    "server*",
]

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = "."
testpaths = ["tests"]
addopts = "-q"

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'win32' or sys_platform == 'linux'" }
]