[project]
name = "fl-fraud-detection"
version = "0.1.0"
description = "Federated fraud detection with scalable Flower training and transaction screening"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.137.0",
    "flwr>=1.30.0",
    "uvicorn>=0.49.0",
    "mlflow==3.12.0",
    "numpy==2.4.5",
    "pandas>=2.2,<3",
    "pyarrow<24",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "pytest-cov>=4.0.0",
    "httpx>=0.27.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2026.2",
    "river>=0.21.0",
    "six==1.17.0",
    "torch",
    "opacus>=1.6.0",
    "tzdata==2026.2",
    "prometheus-client>=0.16.0",
    "scikit-learn>=1.3.0",
]

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "api*",
    "dataset*",
    "drift*",
    "model*",
    "scripts*",
    "src*",
]

[tool.flwr.app]
publisher = "local"

[tool.flwr.app.components]
serverapp = "src.flower_app.server_app:app"
clientapp = "src.flower_app.client_app:app"

[tool.flwr.app.config]
num-clients = 3
num-server-rounds = 100
model-run = "3_clients"

[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = "."
testpaths = ["tests"]
addopts = "-q"

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'win32' or sys_platform == 'linux'" }
]
